# Draftmic

./: .gitignore  README.md  gen_wix.py  generate_wix_images.cjs  index.html  package-lock.json  package.json  test.rs  trim_logo.mjs  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  test_enigo.rs
src/components/: TitleBar.tsx
src/components/dashboard/: Dashboard.tsx  DashboardView.tsx  HistoryView.tsx  SettingsView.tsx  Sidebar.tsx  TranslationView.tsx
src/components/onboarding/: Onboarding.tsx  OnboardingModel.tsx  OnboardingPermissions.tsx  OnboardingProgress.tsx  OnboardingTutorial.tsx  OnboardingWelcome.tsx
src/components/ui/: HotkeyModal.tsx  MockChat.tsx  MockEmailComposer.tsx  MockIDE.tsx  MockMacWindow.tsx  ModelSelectionGroup.tsx  Select.tsx  Toast.tsx  shiny-button.tsx  spotlight-card.tsx
src/components/widget/: DictateWidget.tsx
src/store/: appStore.ts
