[package]
name = "draftmic"
version = "0.1.0"
description = "Draftmic — Local AI Dictation"
authors = ["Draftmic"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "hush_draft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for model download
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json", "multipart"], default-features = false }
futures-util = "0.3"

# Audio capture
cpal = "0.15"

# File paths
dirs = "5"

# Global Input Hook for Static Overlay
device_query = "2.1.0"

# Find system binaries
which = "6"
tauri-plugin-global-shortcut = "2"
enigo = "0.6.1"
arboard = "3.6.1"
tauri-plugin-positioner = "2.3.2"
hound = "3.5.1"
rubato = "0.15.0"
ringbuf = "0.5.0"
tempfile = "3.27.0"
active-win-pos-rs = "0.11.0"
tauri-plugin-single-instance = "2"

# ── Whisper inference: GPU backend chosen per target OS ───────────────────────
# macOS uses Apple's Metal framework (best for Apple Silicon & Intel Macs)
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }
cocoa = "0.25"

# Windows and Linux use Vulkan (works on NVIDIA, AMD, and Intel GPUs)
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
whisper-rs = { version = "0.16", features = ["vulkan"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
